// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxn6u9y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxn6u9y:visited {
  color: var(--colors-primary500);
}

.sxn6u9y:focus,
.sxn6u9y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxn6u9y:active {
  color: var(--colors-primary500);
}

.sxn6u9yjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxn6u9yjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxn6u9yjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

<div>
  <a
    class="sxn6u9y sxn6u9yjqqvr--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxn6u9y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxn6u9y:visited {
  color: var(--colors-primary500);
}

.sxn6u9y:focus,
.sxn6u9y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxn6u9y:active {
  color: var(--colors-primary500);
}

.sxn6u9yjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxn6u9yjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxn6u9yjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

<div>
  <a
    class="sxn6u9y"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
